# McpBox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml
api/: urls.py  views.py
backend/: settings.py
examples/: production.py  quickstart.py  with_openapi.py
src/mcpbox/: __init__.py  box.py  decorators.py  errors.py  models.py  registry.py
src/mcpbox/middleware/: circuit_breaker.py  rate_limit.py  timeout.py  tracing.py
src/mcpbox/openapi/: parser.py
src/mcpbox/transport/: http.py  sse.py  stdio.py
src/mcpbox/web/: fastapi_importer.py  flask_importer.py
tests/: test_box.py
